<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.kienpt.a08intents.SecondActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_2"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/tv_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum_of_two_numbers"
        android:layout_marginTop="20dp"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/btnGoTo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_activity_1"
        android:layout_margin="10dp"/>

</LinearLayout>
